[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player/assets/normal_stand.png" type="Texture" id=1]
[ext_resource path="res://src/Player/InteractionRay.gd" type="Script" id=2]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://src/Player/assets/normal_holdHeavy.png" type="Texture" id=4]
[ext_resource path="res://src/Player/assets/normal_interact.png" type="Texture" id=5]
[ext_resource path="res://src/Player/assets/guard_stand.png" type="Texture" id=6]
[ext_resource path="res://src/Player/assets/guard_interact.png" type="Texture" id=7]
[ext_resource path="res://src/Player/assets/normal_holdLight.png" type="Texture" id=8]
[ext_resource path="res://src/Player/assets/guard_holdHeavy.png" type="Texture" id=9]
[ext_resource path="res://src/Player/assets/guard_holdLight.png" type="Texture" id=10]
[ext_resource path="res://src/Player/assets/bag.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "guard_heavy",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "guard_interact",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "guard_light",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "guard_stand",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "normal_heavy",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "normal_interact",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "normal_light",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "normal_stand",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 90.9091
height = 261.818

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.35, 0.35 )
collision_mask = 29312
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Player_camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.85, 0.85 )

[node name="Player_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.85714, 0 )
frames = SubResource( 1 )
animation = "normal_heavy"

[node name="Bag" type="Sprite" parent="."]
position = Vector2( -190, 5 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -14.5455, 0 )
shape = SubResource( 2 )

[node name="Bullet_origin" type="Position2D" parent="."]
position = Vector2( 105, 0 )

[node name="Interaction_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 8
collide_with_areas = true
script = ExtResource( 2 )

[node name="Stamina_recovery" type="Timer" parent="."]
wait_time = 0.3

[node name="Stamina_use" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Stamina_recovery" to="." method="_on_Stamina_recovery_timeout"]
[connection signal="timeout" from="Stamina_use" to="." method="_on_Stamina_use_timeout"]
